logs/dag_id=artis_revenue/run_id=manual__2023-09-10T120120.551813+0000/task_id=insert_into_artist_revenue/attempt=1.log
[2023-09-10T12:01:22.492+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: artis_revenue.insert_into_artist_revenue manual__2023-09-10T12:01:20.551813+00:00 [queued]>
[2023-09-10T12:01:22.496+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: artis_revenue.insert_into_artist_revenue manual__2023-09-10T12:01:20.551813+00:00 [queued]>
[2023-09-10T12:01:22.497+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-10T12:01:22.508+0000] {taskinstance.py:1382} INFO - Executing <Task(GenericTransfer): insert_into_artist_revenue> on 2023-09-10 12:01:20.551813+00:00
[2023-09-10T12:01:22.513+0000] {standard_task_runner.py:57} INFO - Started process 2847 to run task
[2023-09-10T12:01:22.515+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'artis_revenue', 'insert_into_artist_revenue', 'manual__2023-09-10T12:01:20.551813+00:00', '--job-id', '85', '--raw', '--subdir', 'DAGS_FOLDER/artist_revenue.py', '--cfg-path', '/tmp/tmp1isa7kky']
[2023-09-10T12:01:22.517+0000] {standard_task_runner.py:85} INFO - Job 85: Subtask insert_into_artist_revenue
[2023-09-10T12:01:22.547+0000] {task_command.py:415} INFO - Running <TaskInstance: artis_revenue.insert_into_artist_revenue manual__2023-09-10T12:01:20.551813+00:00 [running]> on host 80a7ead3f1b6
[2023-09-10T12:01:22.602+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Aditiya Rahman' AIRFLOW_CTX_DAG_ID='artis_revenue' AIRFLOW_CTX_TASK_ID='insert_into_artist_revenue' AIRFLOW_CTX_EXECUTION_DATE='2023-09-10T12:01:20.551813+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-10T12:01:20.551813+00:00'
[2023-09-10T12:01:22.608+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-09-10T12:01:22.613+0000] {base.py:73} INFO - Using connection ID 'datawarehouse' for task execution.
[2023-09-10T12:01:22.614+0000] {generic_transfer.py:77} INFO - Extracting data from postgres
[2023-09-10T12:01:22.614+0000] {generic_transfer.py:78} INFO - Executing: 
 
SELECT a."ArtistId", 
       a."Name", 
       b."Title", 
       c."Name", 
       (d."Quantity" * d."UnitPrice"),
       d."InvoiceLineId",
       e."InvoiceId",
       e."InvoiceDate"
FROM "Artist" a
JOIN "Album" b
ON a."ArtistId" = b."ArtistId"
JOIN "Track" c
ON b."AlbumId" = c."AlbumId"
JOIN "InvoiceLine" d
ON c."TrackId" = d."TrackId"
JOIN "Invoice" e
ON d."InvoiceId" = e."InvoiceId"
[2023-09-10T12:01:22.617+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-09-10T12:01:22.619+0000] {sql.py:418} INFO - Running statement: 
SELECT a."ArtistId", 
       a."Name", 
       b."Title", 
       c."Name", 
       (d."Quantity" * d."UnitPrice"),
       d."InvoiceLineId",
       e."InvoiceId",
       e."InvoiceDate"
FROM "Artist" a
JOIN "Album" b
ON a."ArtistId" = b."ArtistId"
JOIN "Track" c
ON b."AlbumId" = c."AlbumId"
JOIN "InvoiceLine" d
ON c."TrackId" = d."TrackId"
JOIN "Invoice" e
ON d."InvoiceId" = e."InvoiceId", parameters: None
[2023-09-10T12:01:22.647+0000] {sql.py:427} INFO - Rows affected: 2240
[2023-09-10T12:01:22.653+0000] {generic_transfer.py:95} INFO - Running preoperator
[2023-09-10T12:01:22.654+0000] {generic_transfer.py:96} INFO - ["\n        DROP TABLE IF EXISTS 'artist_revenue'\n        ", '\n        CREATE TABLE "artist_revenue" (\n        "ArtistId" INT NOT NULL,\n        "ArtistName" VARCHAR(120),\n        "AlbumTitle" VARCHAR(160) NOT NULL,\n        "TrackName" VARCHAR(200) NOT NULL,\n        "TotalPrice" NUMERIC(10,2) NOT NULL,\n        "InvoiceLineId" INT NOT NULL,\n        "InvoiceId" INT NOT NULL,\n        "InvoiceDate" TIMESTAMP NOT NULL)\n        ']
[2023-09-10T12:01:22.662+0000] {base.py:73} INFO - Using connection ID 'datawarehouse' for task execution.
[2023-09-10T12:01:22.667+0000] {sql.py:418} INFO - Running statement: 
        DROP TABLE IF EXISTS 'artist_revenue'
        , parameters: None
[2023-09-10T12:01:22.668+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/generic_transfer.py", line 97, in execute
    run(self.preoperator)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'artist_revenue'"
LINE 2:         DROP TABLE IF EXISTS 'artist_revenue'
                                     ^

[2023-09-10T12:01:22.682+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=artis_revenue, task_id=insert_into_artist_revenue, execution_date=20230910T120120, start_date=20230910T120122, end_date=20230910T120122
[2023-09-10T12:01:22.694+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 85 for task insert_into_artist_revenue (syntax error at or near "'artist_revenue'"
LINE 2:         DROP TABLE IF EXISTS 'artist_revenue'
                                     ^
; 2847)
[2023-09-10T12:01:22.727+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-10T12:01:22.738+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
